z-index fixed

--- a/css/home.css
+++ b/css/home.css
@@ -294,6 +294,7 @@ section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	z-index: -1;
 }
 
 .final-greet img {
